delete and edit functionality done
