# homework/server/routes.go
@@ -9,10 +9,12 @@ func (serv *Server) bindRoutes(r *chi.Mux) {
 	r.Route("/", func(r chi.Router) {
 		r.Route("/api/v1", func(r chi.Router) {
 			r.Get("/docs/*", httpSwagger.Handler(httpSwagger.URL("http://localhost:8080/api/v1/docs/swagger.json")))
-			r.Post("/edit/{id}", serv.HandlePostEditPost)
-			r.Post("/create", serv.HandlePostCreatePost)
-			r.Post("/delete/{id}", serv.HandlePostDeletePost)
 			r.Get("/docs/swagger.json", serv.handleSwaggerJSON)
+			r.Route("/posts", func(r chi.Router) {
+				r.Put("/", serv.HandlePostEditPost)
+				r.Post("/", serv.HandlePostCreatePost)
+				r.Delete("/{id}", serv.HandlePostDeletePost)
+			})
 		})
 		r.Get("/", serv.handleGetIndex)
 		r.Get("/post/{id}", serv.handleGetPost)
